--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  navigation_dot_bar: ^0.1.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -43,6 +43,10 @@ flutter:
     - assets/images/lake.jpeg
     - assets/images/login_bg.png
     - assets/images/nav_back.png
+    - assets/images/owner_icon.png
+    - assets/images/worker_icon.png
+    - assets/images/select_arrow_icon.png
+    - assets/images/home_header_bg.png
   #  - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
