--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  navigation_dot_bar: ^0.1.3
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  navigation_dot_bar: ^0.1.3
+  equatable: ^1.0.1
+  # 网络框架
+  dio: ^2.1.0
+  pretty_dio_logger: ^1.0.8
+  # 路由管理
+  fluro: ^1.5.1
+  # 屏幕适配
+  flutter_screenutil: ^0.6.0
+  cached_network_image: ^2.0.0-rc.1
+  # 持久化
+  shared_preferences: ^0.5.6
+  # 状态管理
+  flutter_bloc: ^3.0.0
+  # 定位
+  location: ^2.3.5
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +63,9 @@ flutter:
     - assets/images/worker_icon.png
     - assets/images/select_arrow_icon.png
     - assets/images/home_header_bg.png
+    - assets/images/mine_header_bg.png
+    - assets/images/settings_icon.png
+    - assets/images/upload_icon.png
   #  - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
