--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio_cookie_manager: ^1.0.0
+  cookie_jar: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -26,7 +28,7 @@ dependencies:
   navigation_dot_bar: ^0.1.3
   equatable: ^1.0.1
   # 网络框架
-  dio: ^2.1.0
+  dio: ^3.0.8
   pretty_dio_logger: ^1.0.8
   # 路由管理
   fluro: ^1.5.1
