--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   bmprogresshud: ^0.0.5
   result: ^1.0.4
   path_provider: ^1.5.1
+  dio_http2_adapter: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
