--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   result: ^1.0.4
   path_provider: ^1.5.1
   dio_http2_adapter: ^1.0.0
+  # 下拉刷新
+  pull_to_refresh: ^1.5.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
