--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   dio_http2_adapter: ^1.0.0
   # 下拉刷新
   pull_to_refresh: ^1.5.7
+  localstorage: ^3.0.1+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -75,6 +76,7 @@ flutter:
     - assets/images/upload_icon.png
     - assets/images/tab_add_icon.png
     - assets/images/filter_arrow_icon.png
+    - assets/images/publish_close_icon.png
   #  - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
