--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # 下拉刷新
   pull_to_refresh: ^1.5.7
   localstorage: ^3.0.1+4
+  oktoast: ^2.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
