--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   pull_to_refresh: ^1.5.7
   localstorage: ^3.0.1+4
   oktoast: ^2.3.0
+  city_pickers: ^0.1.30
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
