update details page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,9 @@ flutter:
     - assets/images/tab_add_icon.png
     - assets/images/filter_arrow_icon.png
     - assets/images/publish_close_icon.png
+    - assets/images/phone_icon.png
+    - assets/images/wechat_icon.png
+    - assets/images/address_icon.png
   #  - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
